fix svg scaling on IE

--- a/pycones/static/less/pycones.less
+++ b/pycones/static/less/pycones.less
@@ -7,6 +7,16 @@
 @import "type";
 @import "schedule";
 
+/* 1 */
+.ie9 img[src$=".svg"] {
+  width: 100%;
+}
+/* 2 */
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  img[src$=".svg"] {
+    width: 100%;
+  }
+}
 
 footer {
   margin-top: 30px;
